# detect_demo

./: CMakeLists.txt  README.md  main.cpp  video.cpp
include/: logging.h
